Final CSS Unit. 2nd Push

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <div class="container1">
+      <h1 class="nba">NBA Basketball</h1>
+    </div>
+    <img src="Images/warriors.png" class="warriorslogo">
+    <img src="Images/heat.png" class="heatlogo">
+    <p class="teams"> This are my 2 favourite teams.</p> 
+    <img src="Images/nbalogo.jpg" class="nbalogo"
     <script src="script.js"></script>
   </body>
 </html>
