--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="container1">
       <h1 class="nba">NBA Basketball</h1>
     </div>
-    <img src="Images/warriors.png" class="warriorslogo">
-    <img src="Images/heat.png" class="heatlogo">
+    <img src="Images/warriors.png" class="warriorslogo" alt="warriors">
+    <img src="Images/heat.png" class="heatlogo" alt="heat">
     <p class="teams"> This are my 2 favourite teams.</p> 
-    <img src="Images/nbalogo.jpg" class="nbalogo"
+    <img src="Images/nbalogo.jpg" class="nbalogo" alt="nbalogo">
     <script src="script.js"></script>
   </body>
 </html>
