Final CSS Changes Unit3-03

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <img src="Images/warriors.png" class="warriorslogo" alt="warriors">
     <img src="Images/heat.png" class="heatlogo" alt="heat">
-    <p class="teams"> This are my 2 favourite teams.</p> 
+    <p class="teams"> This are my 2 favourite teams</p> 
     <img src="Images/nbalogo.jpg" class="nbalogo" alt="nbalogo">
     <script src="script.js"></script>
   </body>
